--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
-jdk: oraclejdk8
+sudo: false
+
 language: scala
-script: sbt + test
+
+    scala:
+      - 2.11.8
+
+     jdk:
+       - oraclejdk8
+
+script: sbt
 
 branches:
   only:
